# LAB_CLAP

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  main.py  my_lab.ipynb
scripts/: build.sh
